# code-agent-toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini  router.yaml
claude-docs/: custom-field-parsing.md
config/: example-model-config-overrides.yaml  router.yaml
docs/: api-shapes.md  langchain-model-cache.md  reasoning-encrypted-content.md  reasoning-message-id.md  server-filters.md  streaming-reasoning-extra-payload.md  system-clause-filter.md  tool-filter.md
src/claude_router/: router.py  server.py
src/claude_router/adapters/: __init__.py  anthropic_openai_request_adapter.py  anthropic_passthrough.py  base.py  chat_completions_anthropic_response_adapter.py  custom_chatopenai.py  langchain_openai_request_adapter.py  langchain_openai_response_adapter.py  openai_anthropic_response_adapter.py  openai_chat_completions_request_adapter.py  prompt_filter.py  tool_filter.py  unified_langchain_adapter.py
src/claude_router/adapters/openai/: __init__.py  chat_completions_request_adapter.py  chat_completions_response_adapter.py  responses_request_adapter.py  responses_response_adapter.py
src/claude_router/config/: __init__.py  loader.py  schema.py
src/router/: __init__.py  router.py  server.py
src/router/adapters/: __init__.py  anthropic_openai_request_adapter.py  anthropic_passthrough.py  openai_anthropic_response_adapter.py
src/router/config/: loader.py  schema.py
tests/: test_chat_completions_adapters.py  test_config.py  test_custom_chatopenai.py  test_message_conversion.py  test_openai_builtin_web_search.py  test_provider_tool_policy_adapter.py  test_reasoning_empty_summary_creates_thinking.py  test_reasoning_encrypted_content.py  test_reasoning_id_extraction.py  test_response_adapter_message_id.py  test_router.py  test_server_filters.py  test_system_clause_filter.py  test_tool_filter.py
