[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-agent-toolkit"
version = "0.1.0"
description = "Collection of tools for AI code agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "PyYAML>=6.0.2",
    "structlog>=24.4.0",
    "watchdog>=4.0.2",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
    "mypy>=1.11.2",
    "types-PyYAML>=6.0.12.20240917",
]

[project.scripts]
claude-router = "src.router.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
